[package]
name = "imagebed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.6.1"
actix-web = "4.4.0"
futures-util = "0.3.29"
mime = "0.3.17"
new_mime_guess = "4.0.1"
serde = "1.0.190"
serde_derive = "1.0.190"
sha2 = "0.10.8"
toml = "0.8.6"
