[package]
name = "imagebed"
version = "0.1.0"
edition = "2021"
authors = ["Eslzzyl <eslzzyl@163.com>"]
description = "A simple image hosting service based on Actix-web"
repository = "https://github.com/Eslzzyl/imagebed"
readme = "README.md"
license = "MIT"
keywords = ["image-hosting", "actix-web"]
categories = ["web-programming::http-server"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-multipart = "0.6.1"
actix-web = "4.4.0"
clap = { version = "4.4.8", features = ["derive"] }
futures-util = "0.3.29"
log = "0.4.20"
log4rs = "1.2.0"
mime = "0.3.17"
new_mime_guess = "4.0.1"
serde = "1.0.190"
serde_derive = "1.0.190"
sha2 = "0.10.8"
toml = "0.8.6"
